Terminei meu cabeçalho

--- a/Aula.html
+++ b/Aula.html
@@ -6,11 +6,12 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>
-            <h1>imagem</h1>
+        <header class="cabeçalho"> 
+            <img class="img-one" src="https://www.alurastart.com.br/assets/api/share/alura-start.jpg"
+            alt="Alura Start">
             <ul>
-                <li>Escola</li>
-                <li>Estudate</li>
+                <li class="lista-one">Escola</li>
+                <li class="lista-one">Estudante</li>
             </ul>
         </header>
     </body>
